# SDLLove

./: CMakeLists.txt  main.cpp
,github/workflows/: build.yml
.github/workflows/: ios.yml  linux.yml  main.yml
build-scripts/: build-iossimulator.sh  build-linux.sh  build-windows.bat
iossim-assets/: Info.plist
natives/sdl/include/SDL3/: SDL_revision.h
natives/sdl/ios/: libSDL3.dylib
natives/sdl/iossimulator/SDL3.framework/: Info.plist  SDL3
natives/sdl/iossimulator/SDL3.framework/_CodeSignature/: CodeResources
natives/sdl/windows/: SDL3_test.lib
